# calcms

./: .gitignore  .prettierignore  Makefile  README.md  eslint.config.js  package-lock.json  package.json  turbo-2.8.17.tgz  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260315_0001_create_content_items.py
apps/api/src/calcms_api/: __init__.py  main.py
apps/api/src/calcms_api/db/: __init__.py  connection.py  preflight.py
apps/api/src/calcms_api/graphql/: __init__.py  schema.py
apps/api/src/calcms_api/kafka/: __init__.py  client.py
apps/api/src/calcms_api/models/: __init__.py  content.py
apps/api/src/calcms_api/routes/: __init__.py  content.py  health.py
apps/web/: eslint.config.js  index.html  package.json  panda.config.ts  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/graphql/: client.ts
apps/web/src/graphql/queries/: index.ts
